Header added, need to fix the spacing though between the navigation buttons

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -11,6 +11,7 @@
  --color-divider: #1f1f26;
  --color-sk-light-blue: #9EEAF2;
  --color-blurple: #222F66;
+ --color-header: #111834;
 }
 
 @theme inline {
